@@ -73,6 +73,8 @@ artifacts/
 # StyleCop
 StyleCopReport.xml
 
+Dev/**
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
